force-app/main/default/objects/TaxonomyRunUpdateEvent__e/TaxonomyRunUpdateEvent__e.object-meta.xml
<CustomObject>
    <description>To avoid mixed dml error</description>
    <label>TaxonomyRunUpdateEvent</label>
    <pluralLabel>TaxonomyRunUpdateEvents</pluralLabel>
</CustomObject>