force-app/main/default/objects/TaxonomyRunUpdateEvent__e/fields/Processing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Processing_Start_Date__c</fullName>
    <label>Processing Start Date</label>
    <type>DateTime</type>
</CustomField>