force-app/main/default/objects/TaxonomyRunUpdateEvent__e/fields/ProcessingEndDate__c.field-meta.xml
<CustomField>
    <fullName>ProcessingEndDate__c</fullName>
    <label>ProcessingEndDate</label>
    <type>DateTime</type>
</CustomField>