force-app/main/default/objects/TaxonomyRunUpdateEvent__e/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>RecordType</label>
    <length>150</length>
    <type>Text</type>
</CustomField>