force-app/main/default/objects/TaxonomyRunUpdateEvent__e/fields/TaxonomyRunId__c.field-meta.xml
<CustomField>
    <fullName>TaxonomyRunId__c</fullName>
    <label>TaxonomyRunId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>