force-app/main/default/objects/TaxonomyRunUpdateEvent__e/fields/taxVer__c.field-meta.xml
<CustomField>
    <fullName>taxVer__c</fullName>
    <label>taxVer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>